<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/settings"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_margin="10dp"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/ImageView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="30dp"
			android:layout_marginBottom="60dp"
			android:contentDescription="image"
			android:scaleType="center"
			android:src="@drawable/icon_settings" />


		<Button
			android:id="@+id/settingsLogsButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/settingsLogsButton" />

		<Button
			android:id="@+id/settingsHelpButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/settingsHelpButton" />

		<Button
			android:id="@+id/settingsEmailDeveloperButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/settingsEmailDeveloperButton" />

		<Button
			android:id="@+id/settingsBuyProButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/settingsBuyProButton" />

	</LinearLayout>
</ScrollView>