<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/ImageView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="30dp"
			android:layout_marginBottom="20dp"
			android:contentDescription="image"
			android:scaleType="center"
			android:src="@drawable/icon_import" />

		<TextView
			android:id="@+id/importAccountName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="20dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="20dp"
			android:layout_marginBottom="10dp"
			android:ellipsize="middle"
			android:gravity="center"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<Button
			android:id="@+id/importCSVButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/importCSVButton" />

		<TextView
			android:id="@+id/importFileText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="2dp"
			android:layout_marginRight="10dp"
			android:layout_marginBottom="20dp"
			android:ellipsize="middle"
			android:singleLine="true"
			android:text="@string/importFileText"
			android:textAppearance="?android:attr/textAppearanceSmall" />


		<Button
			android:id="@+id/importMappingsButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:enabled="true"
			android:gravity="center_vertical|center_horizontal|left"
			android:minWidth="200dp"
			android:text="@string/importMappingsButton" />

		<TextView
			android:id="@+id/importMapText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="20dp"
			android:layout_marginTop="2dp"
			android:layout_marginRight="20dp"
			android:layout_marginBottom="20dp"
			android:ellipsize="middle"
			android:gravity="center"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<Button
			android:id="@+id/importImportButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="10dp"
			android:enabled="false"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dip"
			android:text="@string/importImportButton" />

	</LinearLayout>
</ScrollView>