<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/ImageView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="30dp"
			android:layout_marginBottom="20dp"
			android:contentDescription="image"
			android:scaleType="center"
			android:src="@drawable/icon_backup" />

		<TextView
			android:id="@+id/toolsAccountName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="20dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="20dp"
			android:layout_marginBottom="10dp"
			android:ellipsize="middle"
			android:gravity="center"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<Button
			android:id="@+id/toolsBackupButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/toolsBackupButton" />

		<Button
			android:id="@+id/toolsRecoverButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/toolsRecoverButton" />


		<Button
			android:id="@+id/toolsShareButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="left|center_vertical|center_horizontal"
			android:minWidth="200dp"
			android:text="@string/toolsShareButton" />


	</LinearLayout>
</ScrollView>