<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp"
	android:orientation="vertical" >


	<TextView android:id="@+id/Title"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:textSize="25sp"
		android:textStyle="bold"
		android:gravity="center_horizontal"
		android:text="@string/logsViewLogs"
	/>

				
		<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp" >
					
		<TextView android:id="@+id/logsLoggingLevel"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/logsLoggingLevel"
			android:gravity="left|center_vertical"
			/>
			


			<TextView android:id="@+id/logsLoggingLevelPicker"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:singleLine="true"
			android:ellipsize="end"
			android:paddingTop="10px"
			android:paddingBottom="10px"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:layout_alignParentRight="true" 
			android:background="@drawable/button_steve"
			/>
			
		</RelativeLayout>

			
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="4px" 
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:background="#C0C0C0"
			>
			</LinearLayout>
			
    <ListView android:layout_width="fill_parent"
              android:id="@+id/logs"
              android:layout_height="wrap_content"
              android:divider="@null"
              android:dividerHeight="0sp"
              android:layout_weight="1"/>
	
    	<LinearLayout
		android:id="@+id/Banner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<Button
		    android:id="@+id/logsClearButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
		    android:gravity="center_vertical|center_horizontal"
		    android:minWidth="200dip"
		    android:text="@string/clearLogs"  />
		</LinearLayout>
		
</LinearLayout>
